--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 This is an Ada library for Raspberry Pi3 ( bcm2837B0 ).
-It provides support for GPIO and SPI.
+It provides support for GPIO, SPI and I2C.
 
 The main purpose of creating it - using it in education for teaching
-programming and robotics,  so the main concept is: easy to use and
+programming and robotics, so the main concept is: easy to use and
 preventing incorrect usage as possible.
 
 For using it you should install:
